# remarkable-backup

./: .gitignore  README.md  flake.nix  remarkable-backup.cabal
app/: Config.hs  Main.hs
data/: example_template.json
src/: RemarkableBackup.hs
test/: RemarkableBackupSpec.hs  Spec.hs
